Tweaking the handling of incorrect datatypes for money.

--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -3099,6 +3099,13 @@
 								</td>
 								<td>If you succeeded your Breath Control roll, check this box. Success increases your breath holding time by 50%</td>
 							</tr>
+							<tr class="item">
+								<td>Oxygen Storage</td>
+								<td>
+									<input type="number" name="system.info.breath.oxygenStorage" value="{{actor.system.info.breath.oxygenStorage}}" data-dtype="Number" />
+								</td>
+								<td>If you have the Doesn't Breathe (Oxygen Storage) advantage, enter the multiplier here.</td>
+							</tr>
 						</table>
 
 						<table>
