Added hiking hours per day to the hiking section of the info tab

--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -3169,6 +3169,13 @@
 								<td>If you have Enhanced Move and are currently able to make use of it, enter it here.</td>
 							</tr>
 							<tr class="item">
+								<td>Hours per day</td>
+								<td>
+									<input type="number" name="system.info.hiking.hours" value="{{actor.system.info.hiking.hours}}" data-dtype="Number" />
+								</td>
+								<td>The rules in the Basic assume you are hiking 16 hours a day and sleeping the other 8. This allows you to vary that figure.</td>
+							</tr>
+							<tr class="item">
 								<td>Terrain</td>
 								<td>
 									<select name="system.info.hiking.terrain">
