Tweaking language for hiking hours.

--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -3173,7 +3173,7 @@
 								<td>
 									<input type="number" name="system.info.hiking.hours" value="{{actor.system.info.hiking.hours}}" data-dtype="Number" />
 								</td>
-								<td>The rules in the Basic assume you are hiking 16 hours a day and sleeping the other 8. This allows you to vary that figure.</td>
+								<td>The rules in the Basic assume you are hiking 16 hours a day, which includes resting as part of the process. This allows you to vary the time spent hiking.</td>
 							</tr>
 							<tr class="item">
 								<td>Terrain</td>
